tests/lifetime/temporaries/hll_temporary_lifetimes_escape.err.expected
error: at 8:12: [LT-LoanConflict] In function 'escaped_temporary_borrow': cannot move from '_temp_0': already borrowed by 'r'
   |
 7 | fn escaped_temporary_borrow() -> i64 {
 8 |   let r = &make();
   |           -^^^^^^ borrow of '_temp_0' occurs here
 9 |   read(r)
   |
  hint: the borrow of 'r' is active until its last use or explicit unborrow.
